# antigravity-api-proxy

./: .dockerignore  .gitattributes  .gitignore  .npmignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.json  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml
docs/: api-endpoints.md  configuration.md  development.md  legal.md  load-balancing.md  menubar-app.md  models.md  openclaw.md  safety-notices.md  testing.md  troubleshooting.md  web-console.md
offline-image/: Dockerfile.reference  README.md  SHA256SUMS.txt
offline-image/scripts/: build-offline-image.sh  (+1 more)
proxy-app/: CLAUDE.md  README.md  package-lock.json  package.json
public/: app.js  index.html
scripts/: stage-bun-runtime.mjs  stage-node-runtime.mjs
src/: config.js  constants.js  errors.js  fallback-config.js  index.html  index.js  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: run-all.cjs  stress-test-normal.cjs  stress-test-streaming.cjs  test-403-account-rotation.cjs  test-403-integration.cjs  test-cache-control.cjs  test-caching-streaming.cjs  test-cross-model-thinking.cjs  test-empty-response-retry.cjs  test-images.cjs  test-interleaved-thinking.cjs  test-multiturn-thinking-tools-streaming.cjs  test-multiturn-thinking-tools.cjs  test-oauth-no-browser.cjs  test-schema-sanitizer.cjs  test-strategies.cjs  test-streaming-whitespace.cjs  test-thinking-signatures.cjs
(+115 files in other folders)
